# vnelogging

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  codecov.yml  package-lock.json
.github/: copilot-instructions.md
.github/instructions/: test-review.instructions.md
.github/workflows/: ci.yml
cmake/: CCache.cmake  ClangTidy.cmake  CppCheck.cmake  Doxygen.cmake  FindCoverage.cmake  FindVneLogging.cmake  ProjectSetup.cmake  ProjectWarnings.cmake
docs/: README.md  doxyfile.in
docs/vertexnova/: CODING_GUIDELINES.md
docs/vertexnova/logging/: logging.md
docs/vertexnova/logging/diagrams/: README.md  api.drawio  context.drawio  logging.drawio
docs/wiki/: API-Reference.md  Architecture.md  Best-Practices.md  Examples.md  Home.md  Installation.md  Performance.md  Quick-Start.md  README.md  Troubleshooting.md  User-Guide.md  _Sidebar.md
examples/: CMakeLists.txt  README.md
examples/01_basic/: CMakeLists.txt  README.md  main.cpp
examples/01_combined_logging/: CMakeLists.txt  README.md
examples/01_combined_logging/myapp/: CMakeLists.txt  main.cpp
examples/01_combined_logging/mylib/: CMakeLists.txt  my_library.cpp  my_library.h
examples/01_hello_logging/: CMakeLists.txt  README.md  main.cpp
examples/02_multiple_loggers/: CMakeLists.txt  README.md  main.cpp
examples/02_subsystem_logging/: CMakeLists.txt  README.md  main.cpp
examples/03_combined_logging/myapp/: CMakeLists.txt
examples/03_spdlog_integration/: README.md
examples/03_spdlog_integration/myapp/: CMakeLists.txt
examples/04_benchmark/: CMakeLists.txt  README.md  main.cpp
examples/04_performance_test/: CMakeLists.txt  README.md  main.cpp
examples/05_multithreaded/: CMakeLists.txt  README.md  main.cpp
include/vertexnova/utils/: macros.h
scripts/: README.md  Untitled  build_ios.sh  build_linux.sh  build_macos.sh  build_web.sh  build_windows.py  build_windows.sh  check_coverage.sh  generate-docs.sh  generate_coverage.sh  run_google_test_filter.sh
src/: CMakeLists.txt
src/vertexnova/common/: macros.h
src/vertexnova/logging/: log_manager.cpp  log_manager.h  logging.cpp  logging.h
src/vertexnova/logging/core/: async_logger.cpp  async_logger.h  console_log_sink.cpp  console_log_sink.h  file_log_sink.cpp  file_log_sink.h  log_dispatcher.cpp  log_dispatcher.h  log_formatter.cpp  log_formatter.h  log_level.h  log_queue.cpp  log_queue.h  log_queue_worker.cpp  log_queue_worker.h  log_sink.h  log_stream.cpp  log_stream.h  logger.h  logger_controller.cpp  logger_controller.h  logger_registry.cpp  logger_registry.h  sync_logger.cpp  sync_logger.h  text_color.cpp  text_color.h  time_stamp.h
src/vertexnova/utils/: path_utils.h
tests/: CMakeLists.txt  log_manager_test.cpp  log_test.cpp  logging_path_test.cpp  logging_system_test.cpp  main.cpp
tests/core/: async_logger_test.cpp  console_log_sink_test.cpp  file_log_sink_test.cpp  log_dispatcher_test.cpp  log_formatter_test.cpp  log_level_test.cpp  log_queue_test.cpp  log_queue_worker_test.cpp  log_stream_test.cpp  logger_controller_test.cpp  logger_performance_test.cpp  sync_logger_test.cpp  text_color_test.cpp  time_stamp_test.cpp
tests/core/mocks/: log_sink_mock.h  time_stamp_provider_mock.h
