#==============================================================================
# Examples CMakeLists.txt
#==============================================================================

# 01 - Combined logging: library with vne::logging + app with spdlog
add_subdirectory(01_combined_logging)

# Add more examples here as they are created
# add_subdirectory(02_basic_usage)
# add_subdirectory(03_async_logging)
