#==============================================================================
# Combined Logging Example
#
# Demonstrates a library using vne::logging and an application using spdlog,
# with both logging to the same file/console output.
#==============================================================================

# Add the library example first
add_subdirectory(mylib)

# Add the application example
add_subdirectory(myapp)
